{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "c12c1546-7969-4441-a7f2-10b4e41a16d9",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "21f87430-da32-4202-999e-2f50fc39b3cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c243cee2-591f-4e8a-9a2c-5c106c7dd31f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0977833-b9a2-4247-ada6-1a1477035d7b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8721144b-ca00-48c9-84ca-f69edc607e03",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}